# 100-exercises-to-learn-rust

./: Cargo.toml
exercises/01_intro/00_welcome/src/: lib.rs
exercises/01_intro/01_syntax/src/: lib.rs
exercises/02_basic_calculator/01_integers/src/: lib.rs
exercises/02_basic_calculator/02_variables/src/: lib.rs
exercises/02_basic_calculator/03_if_else/src/: lib.rs
exercises/02_basic_calculator/04_panics/src/: lib.rs
exercises/02_basic_calculator/05_factorial/src/: lib.rs
exercises/02_basic_calculator/06_while/src/: lib.rs
exercises/02_basic_calculator/07_for/src/: lib.rs
exercises/02_basic_calculator/08_overflow/src/: lib.rs
exercises/02_basic_calculator/10_as_casting/src/: lib.rs
exercises/03_ticket_v1/01_struct/src/: lib.rs
exercises/03_ticket_v1/02_validation/src/: lib.rs
exercises/03_ticket_v1/03_modules/src/: lib.rs
exercises/03_ticket_v1/04_visibility/src/: lib.rs
exercises/03_ticket_v1/05_encapsulation/src/: lib.rs
exercises/03_ticket_v1/06_ownership/src/: lib.rs
exercises/03_ticket_v1/07_setters/src/: lib.rs
exercises/03_ticket_v1/08_stack/src/: lib.rs
exercises/03_ticket_v1/09_heap/src/: lib.rs
exercises/03_ticket_v1/10_references_in_memory/src/: lib.rs
exercises/03_ticket_v1/12_outro/src/: lib.rs
exercises/04_traits/01_trait/src/: lib.rs
exercises/04_traits/02_orphan_rule/src/: lib.rs
exercises/04_traits/03_operator_overloading/src/: lib.rs
exercises/04_traits/04_derive/src/: lib.rs
exercises/04_traits/05_trait_bounds/src/: lib.rs
exercises/04_traits/06_str_slice/src/: lib.rs
(+4 files in other folders)
