[workspace]
members = [
  "exercises/*/*",
  "helpers/common",
  "helpers/mdbook-exercise-linker",
  "helpers/mdbook-link-shortener",
  "helpers/ticket_fields",
]
resolver = "2"

# 这是为了保证该特定练习的预期行为所必需的，
# 无论 'dev' 配置文件中 'overflow-checks' 的 “global” 设置如何。
[profile.dev.package.copy]
overflow-checks = true
[profile.dev]
overflow-checks = false
